fixes links composition

--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ a.resume {
         margin-bottom: 10px;
     }
     .contacts {
-        margin: 50px;
+        margin-top:50px;
     }
     .links {
         flex-wrap: wrap;
