--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
+html {
+    background-color: rgba(78, 166, 202, .36)
+}
+
 body {
     background-image: url("noise.png");
     display: flex;
@@ -98,6 +102,9 @@ a.resume {
 } */
 
 @media (max-width: 1400px) {
+    body {
+        margin-top: -30px;
+    }
     main {
         margin-top: 100px;
     }
@@ -151,6 +158,9 @@ a.resume {
 }
 
 @media (max-width: 875px) {
+    body {
+        margin: 0px;
+    }
     main {
         margin-top: 75px;
     }
@@ -183,13 +193,9 @@ a.resume {
     }
 }
 
-@media (max-width: 450px) {
+@media (max-width: 700px) {
     body {
-        margin: 0;
         margin-top: -25px;
-    }
-    h1 {
-        margin-top: 0px;
     }
     .name-and-image {
         flex-direction: column-reverse;
@@ -198,6 +204,7 @@ a.resume {
     }
     .my-pic, .my-info {
         margin: auto;
+        margin-top: 30px;
         justify-content: center;
         align-items: center;
         margin-bottom: 10px;
@@ -214,5 +221,10 @@ a.resume {
         font-size: 55px;
         width: 55px;
         margin: 5px;
+    }
+}
+@media (max-width: 450px) {
+    body {
+        margin-top: -65px;
     }
 }
