--- a/style.css
+++ b/style.css
@@ -28,6 +28,34 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    
+}
+
+@keyframes slideInFromRight {
+    0% {
+        transform: translateX(150%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromLeft {
+    0% {
+        transform: translateX(-150%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromBottom {
+    0% {
+        transform: translateY(500%);
+    }
+    100% {
+        transform: translateY(0);
+    }
 }
 
 .my-pic {
@@ -41,6 +69,7 @@ body {
     margin-right: 30px;
     border-radius: 15px;
     box-shadow: 5px 5px 20px #12343B;
+    animation: slideInFromLeft 3s ease-in-out 1s 1, fade-1 5s ease-in-out 1s;
 }
 
 h1, h2, h3, p {
@@ -57,7 +86,18 @@ h1 {
 .my-info {
     display: flex;
     flex-direction: column;
+    position: relative;
+    animation: slideInFromRight 3s ease-in-out 1s 1, fade-1 5s ease-in-out 1s;
 }
+
+/* .animate {
+    animation: .75s cubic-bezier(1,-0.01,.12,.8) 1s 1 reveal forwards;
+} */
+
+/* @keyframes reveal {
+    from { clip-path: polygon(0 0, 0 0, 0 100%, 0% 100%); }
+    to { clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); }
+} */
 
 .fa, .fas {
     border-radius: 50%;
@@ -83,18 +123,37 @@ a.resume {
 
 .fa-twitter {
     background: #55ACEE;
+    animation: slideInFromBottom 1.5s ease-in-out 3.6s 1;
+    -webkit-transform: translate3D(0, 0, 0);    
+    /* -webkit-backface-visibility: hidden;
+	-webkit-transform: scale(1); */
 }
 
 .fa-linkedin {
     background: #007bb5;
+    animation: slideInFromBottom 1.5s ease-in-out 3.8s 1;
 }
 
 .fa-medium, .fa-github {
+}
+.fa-medium {
     background: rgb(24, 24, 24);
+    animation: slideInFromBottom 1.5s ease-in-out 4.0s 1;
+}
+
+.fa-github {
+    background: rgb(24, 24, 24);
+    animation: slideInFromBottom 1.5s ease-in-out 4.2s 1;
 }
 
 .fa-envelope {
     background: #dd4b39;
+    animation: slideInFromBottom 1.5s ease-in-out 4.4s 1;
+}
+
+@keyframes fade-1 {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
 }
 
 /* span {
