--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 html {
-    background-color: rgba(78, 166, 202, .36)
+    background-color: #c8dee4;
 }
 
 body {
-    background-image: url("noise.png");
+    background-image: url("./noise.png");
     display: flex;
     justify-content: center;
     align-items: center;
@@ -69,7 +69,7 @@ body {
     margin-right: 30px;
     border-radius: 15px;
     box-shadow: 5px 5px 20px #12343B;
-    animation: slideInFromLeft 3s ease-in-out 1s 1, fade-1 5s ease-in-out 1s;
+    /* animation: slideInFromLeft 3s ease-in-out 1s 1, fade-1 5s ease-in-out 1s; */
 }
 
 h1, h2, h3, p {
@@ -87,7 +87,7 @@ h1 {
     display: flex;
     flex-direction: column;
     position: relative;
-    animation: slideInFromRight 3s ease-in-out 1s 1, fade-1 5s ease-in-out 1s;
+    /* animation: slideInFromRight 3s ease-in-out 1s 1, fade-1 5s ease-in-out 1s; */
 }
 
 /* .animate {
@@ -123,32 +123,32 @@ a.resume {
 
 .fa-twitter {
     background: #55ACEE;
-    animation: slideInFromBottom 1.5s ease-in-out 3.6s 1;
-    -webkit-transform: translate3D(0, 0, 0);    
+    /* animation: slideInFromBottom 1.5s ease-in-out 3.6s 1; */
+    /* -webkit-transform: translate3D(0, 0, 0);     */
     /* -webkit-backface-visibility: hidden;
 	-webkit-transform: scale(1); */
 }
 
 .fa-linkedin {
     background: #007bb5;
-    animation: slideInFromBottom 1.5s ease-in-out 3.8s 1;
+    /* animation: slideInFromBottom 1.5s ease-in-out 3.8s 1; */
 }
 
 .fa-medium, .fa-github {
 }
 .fa-medium {
     background: rgb(24, 24, 24);
-    animation: slideInFromBottom 1.5s ease-in-out 4.0s 1;
+    /* animation: slideInFromBottom 1.5s ease-in-out 4.0s 1; */
 }
 
 .fa-github {
     background: rgb(24, 24, 24);
-    animation: slideInFromBottom 1.5s ease-in-out 4.2s 1;
+    /* animation: slideInFromBottom 1.5s ease-in-out 4.2s 1; */
 }
 
 .fa-envelope {
     background: #dd4b39;
-    animation: slideInFromBottom 1.5s ease-in-out 4.4s 1;
+    /* animation: slideInFromBottom 1.5s ease-in-out 4.4s 1; */
 }
 
 @keyframes fade-1 {
