--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ img {
     height: 600px;
     width: 400px;
     margin-top: 30px;
-    margin-right: 50px;
+    margin-right: 30px;
     border-radius: 15px;
     box-shadow: 5px 5px 20px #12343B;
     animation: slideInFromLeft 3s ease-in-out 0s 1, main-element-fade 5s ease-in-out 0s;
@@ -148,127 +148,135 @@ a.resume {
     background: white !important;
 } */
 
-@media (max-width: 1400px) and (max-height: 950px){
-    
+@media (max-width: 1366px) and (max-height: 1024px) {
+    .name-and-image {
+        margin-top: 50px;
+    }
+    .contacts {
+        margin-top: 100px;
+    }
+    h1 {
+        font-size: 65px;
+    }
+    img {
+        margin-right: 40px;
+    }
 }
 
- /*@media (max-width: 1400px) {
-    body {
-        margin-top: -40px;
+@media (max-width: 1024px) and (max-height: 1370px) {
+    .my-info {
+        width: 400px;
     }
-    main {
-        margin-top: 100px;
+    .name-and-image {
+        margin-top: 50px;
+    }
+    .contacts {
+        margin-top: 150px;
+    }
+}
+
+@media (max-width: 1024px) and (max-height: 770px) {
+    h1 {
+        font-size: 55px;
+    }
+    img {
+        width: 400px
+    };
+    .my-info {
+        width: 425px;
+    }
+    .contacts {
+        margin-top: 90px;
+    }
+    img {
+        height: 480px;
+        width: 320px;
+    }
+}
+
+@media (max-width: 770px) and (max-height: 1024px) {
+    .name-and-image {
+        margin-top: 50px;
+    }
+    img {
+        height: 480px;
+        width: 320px;
     }
     h1 {
         font-size: 50px;
     }
     .my-info {
-        width: 425px;
+        width: 350px;
     }
     .contacts {
-        margin-top: 150px;
-        margin-bottom: 100px;
-    }
-    img {
-        margin-right: 100px;
+        margin-top: 140px;
     }
 }
 
-@media (max-width: 1050px) {
-    main {
-        margin-top: 5px;
-    }
+@media (max-width: 825px) and (max-height: 415px) {
     .name-and-image {
-        justify-content: space-evenly;
+        margin-top: 0px;
     }
-    img {
-        margin-right: 50px;
+    .contacts {
+        margin-top: 50px;
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 725px) and (max-height: 545px) {
+    .name-and-image {
+        margin-top: 0px;
+    }
+    .contacts {
+        margin-top: 50px;
+        margin-bottom: 20px;
     }
     .my-info {
         width: 300px;
     }
-    .contacts {
-        margin-top: 65px;
-        margin-bottom: 10px;
-    }
-}
-
-@media (max-width: 1050px) and (max-height: 1400px) {
-    main {
-        margin-top: 100px;
-    }
-    .contacts {
-        margin-top: 125px;
-    }
-}
-
-@media (max-width: 1050px) and (max-height: 800px) {
-    main {
-        margin-top:30px;
-    }
-    .contacts {
-        margin-top: 75px;
-    }
-}
-
-@media (max-width: 875px) {
-    body {
-        margin: 0px;
-    }
-    main {
-        margin-top: 15px;
-    }
     img {
-        height: 480px;
-        width: 320px;
+        margin-right: 30px;
+        height: 375px;
+        width: 250px;
+    }
+    h1 {
+        font-size: 45px;
+    }
+}
+
+@media (max-width: 570px) and (max-height: 330px) {
+    img {
+        height: 340px;
+        width: 220px;
     }
     .my-info {
-        width: 320px;
+        width: 200px;
     }
-    .contacts {
-        margin-top: 100px;
+    h1 {
+        font-size: 35px;
     }
-}
-@media (max-width: 830px) and (max-height: 400px) {
-    main {
-        margin-top: 5px;
+    h1, h2, h3 {
+        margin-top: 8px;
+        margin-bottom: 8px;
     }
-    img {
-        height: 480px;
-        width: 320px;
-        background-size: 400px;
+    h2 {
+        font-size: 18px;
     }
-    .my-info {
-        width: 320px;
-    }
-    .contacts {
-        margin-top: 60px;
+    .links {
+        width: 250px;
     }
 }
 
-@media (max-width: 700px) {
-    body {
-        margin-top: -25px;
-    }
+@media (max-width: 540px) and (max-height: 720px) {
     .name-and-image {
+        margin-top: 0;
         flex-direction: column-reverse;
         justify-content: center;
         align-items: center;
     }
-    img, .my-info {
-        margin: auto;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 10px;
-    }
-    img {
-        margin-top: 10px;
-    }
-    .my-info {
-        margin-top: 50px;
-    }
     .contacts {
-        margin-top:40px;
+        margin-top: 70px;
+        margin-bottom: 20px;
     }
     .links {
         flex-wrap: wrap;
@@ -278,16 +286,48 @@ a.resume {
     .fa, .fas {
         font-size: 55px;
         width: 55px;
-        margin: 5px;
+        margin: 20px;
     }
 }
-@media (max-width: 450px) {
-    body {
-        margin-top: -75px;
+
+@media (max-width: 415px) and (max-height: 825px) {
+    .name-and-image {
+        margin: 0;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+    }
+    .my-info {
+        width: 300px;
+    }
+    img {
+        margin: 0px;
+        margin-top: 10px;
+    }
+    .contacts {
+        margin-top: 40px;
+    }
+    .links {
+        flex-wrap: wrap;
+        justify-content: center;
+        grid-gap: 30px;
+    }
+    .fa, .fas {
+        font-size: 55px;
+        width: 55px;
+        margin: 7px;
     }
 }
-@media (max-width: 325px) {
-    img, .my-info {
-        width: 280px;
+
+@media (max-width: 325px) and (max-height: 655px) {
+    img {
+        height: 340px;
+        width: 220px;
     }
-} */
+    .my-info {
+        width: 230px;
+    }
+    .fa {
+        margin: 7px;
+    }
+}
