--- a/style.css
+++ b/style.css
@@ -69,9 +69,9 @@ img {
     width: 400px;
     margin-top: 30px;
     margin-right: 30px;
-    border-radius: 15px;
-    box-shadow: 5px 5px 20px #12343B;
-    animation: slideInFromLeft 3s ease-in-out 0s 1, main-element-fade 5s ease-in-out 0s;
+    border-radius: 5px;
+    box-shadow: 5px 5px 20px #375158;
+    animation: slideInFromLeft 1.5s ease-in-out 0s 1, main-element-fade 2.5s ease-in-out 0s;
 }
 
 h1, h2, h3, p {
@@ -82,14 +82,19 @@ h1, h2, h3, p {
 
 h1 {
     font-size: 75px;
-    margin-bottom: 25px;
+    margin-bottom: 5px;
+    margin-left: -5px;
+}
+
+h2 {
+    margin-top: 0px;
 }
 
 .my-info {
     display: flex;
     flex-direction: column;
     position: relative;
-    animation: slideInFromRight 3s ease-in-out 0s 1, main-element-fade 5s ease-in-out 0s;
+    animation: slideInFromRight 1.5s ease-in-out 0s 1, main-element-fade 2.5s ease-in-out 0s;
 }
 
 .fa, .fas {
@@ -116,27 +121,27 @@ a.resume {
 
 .fa-twitter {
     background: #55ACEE;
-    animation: slideInFromBottom 5.2s ease-in-out -1s 1;
+    animation: slideInFromBottom 2.6s ease-in-out -1s 1;
 }
 
 .fa-linkedin {
     background: #007bb5;
-    animation: slideInFromBottom 5.4s ease-in-out -1s 1;
+    animation: slideInFromBottom 2.7s ease-in-out -1s 1;
 }
 
 .fa-medium {
     background: rgb(24, 24, 24);
-    animation: slideInFromBottom 5.6s ease-in-out -1s 1;
+    animation: slideInFromBottom 2.8s ease-in-out -1s 1;
 }
 
 .fa-github {
     background: rgb(24, 24, 24);
-    animation: slideInFromBottom 5.8s ease-in-out -1s 1;
+    animation: slideInFromBottom 2.9s ease-in-out -1s 1;
 }
 
 .fa-envelope {
     background: #dd4b39;
-    animation: slideInFromBottom 6s ease-in-out -1s 1;
+    animation: slideInFromBottom 3s ease-in-out -1s 1;
 }
 
 @keyframes main-element-fade {
@@ -273,6 +278,9 @@ a.resume {
         flex-direction: column-reverse;
         justify-content: center;
         align-items: center;
+    }
+    img {
+        margin-right: 0px;
     }
     .contacts {
         margin-top: 70px;
