--- a/style.css
+++ b/style.css
@@ -11,6 +11,95 @@ body {
     align-items: center;
 }
 
+/* modal tests */
+
+html {
+    box-sizing: border-box;
+}
+  *, *:before, *:after {
+    box-sizing: inherit;
+}
+  
+html, body {
+    font-family: 'Open Sans', sans-serif;
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    background-color: #f6f6f6;
+    min-height: 100vh;
+    height: 100vh;
+    padding: 35px;
+    position: relative;
+}
+
+a {
+    text-decoration: none;
+    color: inherit
+}
+
+.body-blackout {
+    position: absolute;
+    z-index: 1010;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .65);
+    display: none;
+}
+
+.placeholder-img {
+    height: 50px;
+    width: 50px;
+}
+
+.body-blackout.is-blacked-out {
+    display: block;
+}
+
+  
+.popup-trigger {
+    display: inline-block;
+}
+  
+.popup-modal {
+    height: 365px;
+    width: 650px;
+    background-color: #fff;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 45px;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 300ms ease-in-out;
+    z-index: 1011;
+}
+    
+.popup-modal.is--visible {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.popup-modal__close {
+    position: absolute;
+    font-size: 1.2rem;
+    right: -10px;
+    top: -10px;
+    cursor: pointer;
+}
+
+.fa {
+    margin 10px;
+}
+
+/* end modal tests */
+
+
+
 .name-and-image, .contacts {
     display: flex;
     flex-direction: row;
@@ -107,13 +196,13 @@ h2 {
     margin: 2px;
 }
 
-a, a:visited {
+/* a, a:visited {
     color: white;
 }
 
 a.resume {
     color: #294A51
-}
+} */
 
 .fa:hover {
     opacity: 0.7;
